--- a/chat/docker-compose.yml
+++ b/chat/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "8888:8888"
       - "8887:8887"
+      - "3213:3213"
     privileged: true
     restart: always
     networks:
@@ -27,6 +28,7 @@ services:
   mysql:
     container_name: mysql57
     image: mysql:5.7
+    platform: linux/x86_64
     ports:
       - "43306:3306"
     environment:
@@ -43,5 +45,55 @@ services:
       - chat_network
     restart: always
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+  etcd:
+    container_name: milvus-etcd
+    image: quay.io/coreos/etcd:v3.5.5
+    environment:
+      - ETCD_AUTO_COMPACTION_MODE=revision
+      - ETCD_AUTO_COMPACTION_RETENTION=1000
+      - ETCD_QUOTA_BACKEND_BYTES=4294967296
+      - ETCD_SNAPSHOT_COUNT=50000
+    volumes:
+      - ./build/etcd/data:/etcd
+    networks:
+      - chat_network
+    restart: always
+    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+  minio:
+    container_name: milvus-minio
+    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - ./build/minio/data:/minio_data
+    networks:
+      - chat_network
+    restart: always
+    command: minio server /minio_data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+  standalone:
+    container_name: milvus-standalone
+    image: milvusdb/milvus:v2.2.6
+    platform: linux/x86_64
+    command: ["milvus", "run", "standalone"]
+    environment:
+      ETCD_ENDPOINTS: etcd:2379
+      MINIO_ADDRESS: minio:9000
+    volumes:
+      - ./build/milvus:/var/lib/milvus
+    ports:
+      - "19530:19530"
+      - "9091:9091"
+    depends_on:
+      - "etcd"
+      - "minio"
+    networks:
+      - chat_network
+    restart: always
 networks:
   chat_network:
